syntax = "proto3";

package songs;

import "google/protobuf/empty.proto";

message AddToRoomRequest {
  string namespace = 1;
  string user_id = 2;
  string room = 3;
}
message RemoveFromRoomRequest {
  string namespace = 1;
  string user_id = 2;
  string room = 3;
}

message EmitMessageRequest {
  string namespace = 1;
  string user_id = 2;
  string room = 3;
  string event_name = 4;
  string payload = 5;
}

service Websockets {
  rpc AddToRoom(AddToRoomRequest) returns (google.protobuf.Empty) {};
  rpc RemoveFromRoom(RemoveFromRoomRequest) returns (google.protobuf.Empty) {};
  rpc EmitMessage(EmitMessageRequest) returns (google.protobuf.Empty) {};
}